--- a/Anime.css
+++ b/Anime.css
@@ -231,7 +231,7 @@ simple rule of add = #more {background-image: url();}
 #more934 {background-image: url(http://cdn.myanimelist.net/images/anime/12/19634.jpg);}
 #more813 {background-image: url(http://cdn.myanimelist.net/images/anime/6/20936.jpg);}
 #more372 {background-image: url(http://cdn.myanimelist.net/images/anime/10/68321.jpg);}
-#more72 {background-image: url(http://cdn.myanimelist.net/images/anime/13/21580.jpg);}
+#more72 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/75260.webp);}
 #more9735 {background-image: url(http://cdn.myanimelist.net/images/anime/12/26966.jpg);}
 #more3371 {background-image: url(http://cdn.myanimelist.net/images/anime/9/28463.jpg);}
 #more2759 {background-image: url(http://cdn.myanimelist.net/images/anime/12/24484.jpg);}
@@ -386,7 +386,7 @@ simple rule of add = #more {background-image: url();}
 #more645 {background-image: url(http://cdn.myanimelist.net/images/anime/3/10555.jpg);}
 #more437 {background-image: url(http://cdn.myanimelist.net/images/anime/7/72295.jpg);}
 #more401 {background-image: url(http://cdn.myanimelist.net/images/anime/13/28895.jpg);}
-#more73 {background-image: url(http://cdn.myanimelist.net/images/anime/10/31967.jpg);}
+#more73 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/75261.webp);}
 #more24 {background-image: url(http://cdn.myanimelist.net/images/anime/9/27854.jpg);}
 #more11879 {background-image: url(http://cdn.myanimelist.net/images/anime/8/33449.jpg);}
 #more11757 {background-image: url(http://cdn.myanimelist.net/images/anime/11/39717.jpg);}
@@ -674,13 +674,13 @@ simple rule of add = #more {background-image: url();}
 #more5074 {background-image: url(http://cdn.myanimelist.net/images/anime/10/53907.jpg);}
 #more5060 {background-image: url(http://cdn.myanimelist.net/images/anime/10/26445.jpg);}
 #more4725 {background-image: url(http://cdn.myanimelist.net/images/anime/4/28689.jpg);}
-#more2963 {background-image: url(http://cdn.myanimelist.net/images/anime/8/6783.jpg);}
+#more2963 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/75279.webp);}
 #more451 {background-image: url(http://cdn.myanimelist.net/images/anime/5/2637.jpg);}
 #more398 {background-image: url(http://cdn.myanimelist.net/images/anime/11/2755.jpg);}
 #more388 {background-image: url(http://cdn.myanimelist.net/images/anime/5/17667.jpg);}
 #more290 {background-image: url(http://cdn.myanimelist.net/images/anime/13/5524.jpg);}
 #more87 {background-image: url(http://cdn.myanimelist.net/images/anime/5/14769.jpg);}
-#more71 {background-image: url(http://cdn.myanimelist.net/images/anime/6/9549.jpg);}
+#more71 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/75259.webp);}
 #more14735 {background-image: url(http://cdn.myanimelist.net/images/anime/4/47419.jpg);}
 #more10790 {background-image: url(http://cdn.myanimelist.net/images/anime/4/37451.jpg);}
 #more10380 {background-image: url(http://cdn.myanimelist.net/images/anime/8/28544.jpg);}
@@ -1033,7 +1033,7 @@ simple rule of add = #more {background-image: url();}
 #more1289 {background-image: url(http://cdn.myanimelist.net/images/anime/7/23499.jpg);}
 #more1251 {background-image: url(http://cdn.myanimelist.net/images/anime/2/52681.jpg);}
 #more901 {background-image: url(http://cdn.myanimelist.net/images/anime/5/10200.jpg);}
-#more530 {background-image: url(http://cdn.myanimelist.net/images/anime/1/530.jpg);}
+#more530 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/20250.webp);}
 #more334 {background-image: url(http://cdn.myanimelist.net/images/anime/8/6092.jpg);}
 #more304 {background-image: url(http://cdn.myanimelist.net/images/anime/5/71211.jpg);}
 #more270 {background-image: url(http://cdn.myanimelist.net/images/anime/10/19956.jpg);}
@@ -1224,7 +1224,7 @@ simple rule of add = #more {background-image: url();}
 #more5667 {background-image: url(http://cdn.myanimelist.net/images/anime/2/17923.jpg);}
 #more5042 {background-image: url(http://cdn.myanimelist.net/images/anime/6/22223.jpg);}
 #more2518 {background-image: url(http://cdn.myanimelist.net/images/anime/4/3538.jpg);}
-#more1691 {background-image: url(http://cdn.myanimelist.net/images/anime/12/23136.jpg);}
+#more1691 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/23282.webp);}
 #more1459 {background-image: url(http://cdn.myanimelist.net/images/anime/2/54793.jpg);}
 #more906 {background-image: url(http://cdn.myanimelist.net/images/anime/12/10205.jpg);}
 #more449 {background-image: url(http://cdn.myanimelist.net/images/anime/10/20109.jpg);}
@@ -1356,7 +1356,7 @@ simple rule of add = #more {background-image: url();}
 #more1475 {background-image: url(http://cdn.myanimelist.net/images/anime/10/61669.jpg);}
 #more1439 {background-image: url(http://cdn.myanimelist.net/images/anime/6/72201.jpg);}
 #more1426 {background-image: url(http://cdn.myanimelist.net/images/anime/11/61587.jpg);}
-#more656 {background-image: url(http://cdn.myanimelist.net/images/anime/1/656.jpg);}
+#more656 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/26373.webp);}
 #more476 {background-image: url(http://cdn.myanimelist.net/images/anime/8/19926.jpg);}
 #more158 {background-image: url(http://cdn.myanimelist.net/images/anime/11/2711.jpg);}
 #more29 {background-image: url(http://cdn.myanimelist.net/images/anime/6/50901.jpg);}
@@ -1790,7 +1790,7 @@ simple rule of add = #more {background-image: url();}
 #more1524 {background-image: url(http://cdn.myanimelist.net/images/anime/4/50349.jpg);}
 #more1374 {background-image: url(http://cdn.myanimelist.net/images/anime/6/3697.jpg);}
 #more1147 {background-image: url(http://cdn.myanimelist.net/images/anime/9/23557.jpg);}
-#more1013 {background-image: url(http://cdn.myanimelist.net/images/anime/9/9376.jpg);}
+#more1013 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/74930.webp);}
 #more975 {background-image: url(http://cdn.myanimelist.net/images/anime/6/23054.jpg);}
 #more844 {background-image: url(http://cdn.myanimelist.net/images/anime/5/15308.jpg);}
 #more807 {background-image: url(http://cdn.myanimelist.net/images/anime/6/45953.jpg);}
@@ -2094,7 +2094,7 @@ simple rule of add = #more {background-image: url();}
 #more144 {background-image: url(http://cdn.myanimelist.net/images/anime/1/144.jpg);}
 #more24429 {background-image: url(http://cdn.myanimelist.net/images/anime/6/68981.jpg);}
 #more21563 {background-image: url(http://cdn.myanimelist.net/images/anime/12/60703.jpg);}
-#more16417 {background-image: url(http://cdn.myanimelist.net/images/anime/10/67833.jpg);}
+#more16417 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/79594.webp);}
 #more14127 {background-image: url(http://cdn.myanimelist.net/images/anime/7/38959.jpg);}
 #more13093 {background-image: url(http://cdn.myanimelist.net/images/anime/12/41297.jpg);}
 #more10681 {background-image: url(http://cdn.myanimelist.net/images/anime/9/34495.jpg);}
@@ -2790,7 +2790,7 @@ simple rule of add = #more {background-image: url();}
 #more1843 {background-image: url(http://cdn.myanimelist.net/images/anime/1/1843.jpg);}
 #more1584 {background-image: url(http://cdn.myanimelist.net/images/anime/13/59213.jpg);}
 #more1138 {background-image: url(http://cdn.myanimelist.net/images/anime/8/46699.jpg);}
-#more892 {background-image: url(http://cdn.myanimelist.net/images/anime/4/5794.jpg);}
+#more892 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/76790.webp);}
 #more873 {background-image: url(http://cdn.myanimelist.net/images/anime/3/13050.jpg);}
 #more580 {background-image: url(http://cdn.myanimelist.net/images/anime/13/63859.jpg);}
 #more579 {background-image: url(http://cdn.myanimelist.net/images/anime/12/2867.jpg);}
@@ -3027,7 +3027,7 @@ simple rule of add = #more {background-image: url();}
 #more1119 {background-image: url(http://cdn.myanimelist.net/images/anime/2/41799.jpg);}
 #more1024 {background-image: url(http://cdn.myanimelist.net/images/anime/5/15408.jpg);}
 #more747 {background-image: url(http://cdn.myanimelist.net/images/anime/6/3718.jpg);}
-#more729 {background-image: url(http://cdn.myanimelist.net/images/anime/12/29624.jpg);}
+#more729 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/29624.webp);}
 #more711 {background-image: url(http://cdn.myanimelist.net/images/anime/11/61229.jpg);}
 #more419 {background-image: url(http://cdn.myanimelist.net/images/anime/4/23744.jpg);}
 #more292 {background-image: url(http://cdn.myanimelist.net/images/anime/5/6594.jpg);}
@@ -3243,7 +3243,7 @@ simple rule of add = #more {background-image: url();}
 #more24973 {background-image: url(http://cdn.myanimelist.net/images/anime/8/70065.jpg);}
 #more24169 {background-image: url(http://cdn.myanimelist.net/images/anime/8/62767.jpg);}
 #more20473 {background-image: url(http://cdn.myanimelist.net/images/anime/2/54455.jpg);}
-#more12505 {background-image: url(http://cdn.myanimelist.net/images/anime/5/35169.jpg);}
+#more12505 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/79351.webp);}
 #more10933 {background-image: url(http://cdn.myanimelist.net/images/anime/5/30175.jpg);}
 #more10893 {background-image: url(http://cdn.myanimelist.net/images/anime/6/61947.jpg);}
 #more10578 {background-image: url(http://cdn.myanimelist.net/images/anime/13/32285.jpg);}
@@ -3289,7 +3289,7 @@ simple rule of add = #more {background-image: url();}
 #more9568 {background-image: url(http://cdn.myanimelist.net/images/anime/7/26485.jpg);}
 #more8754 {background-image: url(http://cdn.myanimelist.net/images/anime/6/24189.jpg);}
 #more8361 {background-image: url(http://cdn.myanimelist.net/images/anime/10/22023.jpg);}
-#more7148 {background-image: url(http://cdn.myanimelist.net/images/anime/4/22524.jpg);}
+#more7148 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/75252.webp);}
 #more6735 {background-image: url(http://cdn.myanimelist.net/images/anime/3/15484.jpg);}
 #more6726 {background-image: url(http://cdn.myanimelist.net/images/anime/13/15465.jpg);}
 #more6056 {background-image: url(http://cdn.myanimelist.net/images/anime/4/30805.jpg);}
@@ -6013,7 +6013,7 @@ simple rule of add = #more {background-image: url();}
 #more2342 {background-image: url(http://cdn.myanimelist.net/images/anime/10/13292.jpg);}
 #more2179 {background-image: url(http://cdn.myanimelist.net/images/anime/3/29906.jpg);}
 #more2079 {background-image: url(http://cdn.myanimelist.net/images/anime/9/29832.jpg);}
-#more1862 {background-image: url(http://cdn.myanimelist.net/images/anime/8/17636.jpg);}
+#more1862 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/82422.webp);}
 #more1390 {background-image: url(http://cdn.myanimelist.net/images/anime/5/41639.jpg);}
 #more1267 {background-image: url(http://cdn.myanimelist.net/images/anime/9/10452.jpg);}
 #more556 {background-image: url(http://cdn.myanimelist.net/images/anime/4/13729.jpg);}
@@ -6108,7 +6108,7 @@ simple rule of add = #more {background-image: url();}
 #more2469 {background-image: url(http://cdn.myanimelist.net/images/anime/6/59729.jpg);}
 #more2245 {background-image: url(http://cdn.myanimelist.net/images/anime/8/49619.jpg);}
 #more1038 {background-image: url(http://cdn.myanimelist.net/images/anime/12/9394.jpg);}
-#more546 {background-image: url(http://cdn.myanimelist.net/images/anime/1/546.jpg);}
+#more546 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/75506.webp);}
 #more25429 {background-image: url(http://cdn.myanimelist.net/images/anime/3/71767.jpg);}
 #more17012 {background-image: url(http://cdn.myanimelist.net/images/anime/4/45865.jpg);}
 #more13691 {background-image: url(http://cdn.myanimelist.net/images/anime/7/47431.jpg);}
@@ -10528,7 +10528,7 @@ simple rule of add = #more {background-image: url();}
 #more30370 {background-image: url(http://cdn.myanimelist.net/images/anime/8/75974.jpg);}
 #more30953 {background-image: url(http://cdn.myanimelist.net/images/anime/7/74496.jpg);}
 #more31128 {background-image: url(http://cdn.myanimelist.net/images/anime/11/74848.jpg);}
-#more31553 {background-image: url(http://cdn.myanimelist.net/images/anime/9/76070.jpg);}
+#more31553 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/78941.webp);}
 #more31636 {background-image: url(http://cdn.myanimelist.net/images/anime/4/76277.jpg);}
 #more30694 {background-image: url(http://cdn.myanimelist.net/images/anime/7/74606.jpg);}
 #more31339 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80271.webp);}
@@ -10562,7 +10562,7 @@ simple rule of add = #more {background-image: url();}
 #more31741 {background-image: url(http://cdn.myanimelist.net/images/anime/4/76463l.jpg);}
 #more30382 {background-image: url(http://cdn.myanimelist.net/images/anime/4/74989l.jpg);}
 #more30455 {background-image: url(http://cdn.myanimelist.net/images/anime/5/72868l.jpg);}
-#more31418 {background-image: url(http://cdn.myanimelist.net/images/anime/11/75702l.jpg);}
+#more31418 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/81398.webp);}
 #more31096 {background-image: url(http://cdn.myanimelist.net/images/anime/5/74706l.jpg);}
 #more31665 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76303l.jpg);}
 #more31710 {background-image: url(http://cdn.myanimelist.net/images/anime/10/76412l.jpg);}
@@ -10667,12 +10667,10 @@ simple rule of add = #more {background-image: url();}
 #more33352 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/80143.webp);}
 #more33161 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79651.webp);}
 #more34176 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82428.webp);}
-
-
-
-
-
-
+#more32901 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/78920.webp);}
+#more31706 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79946.webp);}
+#more32214 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/78805.webp);}
+#more31245 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82121.webp);}
 
 
 
