--- a/Anime.css
+++ b/Anime.css
@@ -99,7 +99,7 @@ simple rule of add = #more {background-image: url();}
 #more4224 {background-image: url(http://cdn.myanimelist.net/images/anime/5/22125.jpg);}
 #more25781 {background-image: url(http://cdn.myanimelist.net/images/anime/8/69497.jpg);}
 #more12859 {background-image: url(http://cdn.myanimelist.net/images/anime/6/44297.jpg);}
-#more12531 {background-image: url(http://cdn.myanimelist.net/images/anime/4/36007.jpg);}
+#more12531 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/79781.webp);}
 #more10165 {background-image: url(http://cdn.myanimelist.net/images/anime/9/29714.jpg);}
 #more7655 {background-image: url(http://cdn.myanimelist.net/images/anime/4/54999.jpg);}
 #more6547 {background-image: url(http://cdn.myanimelist.net/images/anime/10/22062.jpg);}
@@ -239,7 +239,7 @@ simple rule of add = #more {background-image: url();}
 #more21469 {background-image: url(http://cdn.myanimelist.net/images/anime/9/65571.jpg);}
 #more16001 {background-image: url(http://cdn.myanimelist.net/images/anime/10/45526.jpg);}
 #more9656 {background-image: url(http://cdn.myanimelist.net/images/anime/8/27174.jpg);}
-#more8425 {background-image: url(http://cdn.myanimelist.net/images/anime/11/27906.jpg);}
+#more8425 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/81551.webp);}
 #more8129 {background-image: url(http://cdn.myanimelist.net/images/anime/3/24865.jpg);}
 #more2952 {background-image: url(http://cdn.myanimelist.net/images/anime/6/63573.jpg);}
 #more1974 {background-image: url(http://cdn.myanimelist.net/images/anime/1/2043.jpg);}
@@ -260,7 +260,7 @@ simple rule of add = #more {background-image: url();}
 #more20899 {background-image: url(http://cdn.myanimelist.net/images/anime/11/55267.jpg);}
 #more14513 {background-image: url(http://cdn.myanimelist.net/images/anime/11/42773.jpg);}
 #more11597 {background-image: url(http://cdn.myanimelist.net/images/anime/10/35619.jpg);}
-#more10620 {background-image: url(http://cdn.myanimelist.net/images/anime/13/33465.jpg);}
+#more10620 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/35551.webp);}
 #more5682 {background-image: url(http://cdn.myanimelist.net/images/anime/8/22470.jpg);}
 #more4772 {background-image: url(http://cdn.myanimelist.net/images/anime/11/15053.jpg);}
 #more1914 {background-image: url(http://cdn.myanimelist.net/images/anime/7/15931.jpg);}
@@ -279,7 +279,7 @@ simple rule of add = #more {background-image: url();}
 #more21855 {background-image: url(http://cdn.myanimelist.net/images/anime/13/65755.jpg);}
 #more21647 {background-image: url(http://cdn.myanimelist.net/images/anime/5/60473.jpg);}
 #more20371 {background-image: url(http://cdn.myanimelist.net/images/anime/11/65927.jpg);}
-#more12189 {background-image: url(http://cdn.myanimelist.net/images/anime/13/50521.jpg);}
+#more12189 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/39025.webp);}
 #more10080 {background-image: url(http://cdn.myanimelist.net/images/anime/11/30030.jpg);}
 #more10049 {background-image: url(http://cdn.myanimelist.net/images/anime/12/30111.jpg);}
 #more8740 {background-image: url(http://cdn.myanimelist.net/images/anime/2/24152.jpg);}
@@ -478,7 +478,7 @@ simple rule of add = #more {background-image: url();}
 #more416 {background-image: url(http://cdn.myanimelist.net/images/anime/6/2878.jpg);}
 #more22673 {background-image: url(http://cdn.myanimelist.net/images/anime/13/59027.jpg);}
 #more20159 {background-image: url(http://cdn.myanimelist.net/images/anime/7/53701.jpg);}
-#more9919 {background-image: url(http://cdn.myanimelist.net/images/anime/5/29355.jpg);}
+#more9919 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/28499.webp);}
 #more8407 {background-image: url(http://cdn.myanimelist.net/images/anime/11/50309.jpg);}
 #more5530 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75535l.jpg);}
 #more4080 {background-image: url(http://cdn.myanimelist.net/images/anime/7/22639.jpg);}
@@ -845,7 +845,7 @@ simple rule of add = #more {background-image: url();}
 #more856 {background-image: url(http://cdn.myanimelist.net/images/anime/9/24605.jpg);}
 #more584 {background-image: url(http://cdn.myanimelist.net/images/anime/1/584.jpg);}
 #more123 {background-image: url(http://cdn.myanimelist.net/images/anime/2/20140.jpg);}
-#more24833 {background-image: url(http://cdn.myanimelist.net/images/anime/3/69857.jpg);}
+#more24833 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/75639.webp);}
 #more21105 {background-image: url(http://cdn.myanimelist.net/images/anime/10/64763.jpg);}
 #more20057 {background-image: url(http://cdn.myanimelist.net/images/anime/4/56611.jpg);}
 #more17249 {background-image: url(http://cdn.myanimelist.net/images/anime/8/46049.jpg);}
@@ -2180,7 +2180,7 @@ simple rule of add = #more {background-image: url();}
 #more16033 {background-image: url(http://cdn.myanimelist.net/images/anime/4/43467.jpg);}
 #more15719 {background-image: url(http://cdn.myanimelist.net/images/anime/11/49101.jpg);}
 #more14829 {background-image: url(http://cdn.myanimelist.net/images/anime/7/52603.jpg);}
-#more11785 {background-image: url(http://cdn.myanimelist.net/images/anime/6/49081.jpg);}
+#more11785 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/45392.webp);}
 #more9958 {background-image: url(http://cdn.myanimelist.net/images/anime/13/29542.jpg);}
 #more9733 {background-image: url(http://cdn.myanimelist.net/images/anime/12/26963.jpg);}
 #more8909 {background-image: url(http://cdn.myanimelist.net/images/anime/4/60787.jpg);}
@@ -3530,7 +3530,7 @@ simple rule of add = #more {background-image: url();}
 #more757 {background-image: url(http://cdn.myanimelist.net/images/anime/5/27052.jpg);}
 #more377 {background-image: url(http://cdn.myanimelist.net/images/anime/8/26197.jpg);}
 #more111 {background-image: url(http://cdn.myanimelist.net/images/anime/6/20229.jpg);}
-#more24705 {background-image: url(http://cdn.myanimelist.net/images/anime/11/75057.jpg);}
+#more24705 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/64429.webp);}
 #more23849 {background-image: url(http://cdn.myanimelist.net/images/anime/11/71077.jpg);}
 #more23439 {background-image: url(http://cdn.myanimelist.net/images/anime/3/68989.jpg);}
 #more11747 {background-image: url(http://cdn.myanimelist.net/images/anime/12/32881.jpg);}
@@ -8063,7 +8063,7 @@ simple rule of add = #more {background-image: url();}
 #more29105 {background-image: url(http://cdn.myanimelist.net/images/anime/5/70203.jpg);}
 #more29103 {background-image: url(http://cdn.myanimelist.net/images/anime/5/70199.jpg);}
 #more29099 {background-image: url(http://cdn.myanimelist.net/images/anime/5/70011.jpg);}
-#more29095 {background-image: url(http://cdn.myanimelist.net/images/anime/2/70139.jpg);}
+#more29095 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/72855.webp);}
 #more29093 {background-image: url(http://cdn.myanimelist.net/images/anime/4/70137.jpg);}
 #more29089 {background-image: url(http://cdn.myanimelist.net/images/anime/3/69999.jpg);}
 #more29087 {background-image: url(http://cdn.myanimelist.net/images/anime/5/69997.jpg);}
@@ -8097,7 +8097,7 @@ simple rule of add = #more {background-image: url();}
 #more28915 {background-image: url(http://cdn.myanimelist.net/images/anime/11/70497.jpg);}
 #more28913 {background-image: url(http://cdn.myanimelist.net/images/anime/4/71497.jpg);}
 #more28911 {background-image: url(http://cdn.myanimelist.net/images/anime/5/71503.jpg);}
-#more28907 {background-image: url(http://cdn.myanimelist.net/images/anime/6/69851.jpg);}
+#more28907 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/75950.webp);}
 #more28897 {background-image: url(http://cdn.myanimelist.net/images/anime/6/69925.jpg);}
 #more28891 {background-image: url(http://cdn.myanimelist.net/images/anime/5/69769.jpg);}
 #more28887 {background-image: url(http://cdn.myanimelist.net/images/anime/8/69699.jpg);}
@@ -8290,7 +8290,7 @@ simple rule of add = #more {background-image: url();}
 #more27837 {background-image: url(http://cdn.myanimelist.net/images/anime/7/67439.jpg);}
 #more27833 {background-image: url(http://cdn.myanimelist.net/images/anime/6/77838l.jpg);}
 #more27831 {background-image: url(http://cdn.myanimelist.net/images/anime/8/74981l.jpg);}
-#more27829 {background-image: url(http://cdn.myanimelist.net/images/anime/3/67435.jpg);}
+#more27829 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/76705.webp);}
 #more27825 {background-image: url(http://cdn.myanimelist.net/images/anime/8/67419.jpg);}
 #more27811 {background-image: url(http://cdn.myanimelist.net/images/anime/6/68273.jpg);}
 #more27785 {background-image: url(http://cdn.myanimelist.net/images/anime/4/70995.jpg);}
@@ -8631,7 +8631,7 @@ simple rule of add = #more {background-image: url();}
 #more24783 {background-image: url(http://cdn.myanimelist.net/images/anime/5/63727.jpg);}
 #more24775 {background-image: url(http://cdn.myanimelist.net/images/anime/11/63713.jpg);}
 #more24773 {background-image: url(http://cdn.myanimelist.net/images/anime/6/63711.jpg);}
-#more24765 {background-image: url(http://cdn.myanimelist.net/images/anime/5/75082l.jpg);}
+#more24765 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/74995.webp);}
 #more24743 {background-image: url(http://cdn.myanimelist.net/images/anime/3/63767.jpg);}
 #more24719 {background-image: url(http://cdn.myanimelist.net/images/anime/5/63581.jpg);}
 #more24683 {background-image: url(http://cdn.myanimelist.net/images/anime/11/63535.jpg);}
@@ -10020,7 +10020,7 @@ simple rule of add = #more {background-image: url();}
 #more9292 {background-image: url(http://cdn.myanimelist.net/images/anime/11/25741.jpg);}
 #more9284 {background-image: url(http://cdn.myanimelist.net/images/anime/9/25748.jpg);}
 #more9270 {background-image: url(http://cdn.myanimelist.net/images/anime/12/25675.jpg);}
-#more9260 {background-image: url(http://cdn.myanimelist.net/images/anime/4/32843.jpg);}
+#more9260 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/76485.webp);}
 #more9244 {background-image: url(http://cdn.myanimelist.net/images/anime/5/25617.jpg);}
 #more9243 {background-image: url(http://cdn.myanimelist.net/images/anime/12/25620.jpg);}
 #more9242 {background-image: url(http://cdn.myanimelist.net/images/anime/5/49881.jpg);}
@@ -10521,7 +10521,7 @@ simple rule of add = #more {background-image: url();}
 #more30296 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/76493.jpg);}
 #more30484 {background-image: url(http://cdn.myanimelist.net/images/anime/7/73480.jpg);}
 #more30458 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76048.jpg);}
-#more31324 {background-image: url(http://cdn.myanimelist.net/images/anime/3/74612l.jpg);}
+#more31324 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/75328.webp);}
 #more31368 {background-image: url(http://cdn.myanimelist.net/images/anime/10/75439.jpg);}
 #more31448 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75785.jpg);}
 #more31521 {background-image: url(http://cdn.myanimelist.net/images/anime/10/75984.jpg);}
@@ -10566,7 +10566,7 @@ simple rule of add = #more {background-image: url();}
 #more31096 {background-image: url(http://cdn.myanimelist.net/images/anime/5/74706l.jpg);}
 #more31665 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76303l.jpg);}
 #more31710 {background-image: url(http://cdn.myanimelist.net/images/anime/10/76412l.jpg);}
-#more31859 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76727l.jpg);}
+#more31859 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/77976.webp);}
 #more31704 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76392l.jpg);}
 #more31798 {background-image: url(http://cdn.myanimelist.net/images/anime/10/76635l.jpg);}
 #more31764 {background-image: url(http://cdn.myanimelist.net/images/anime/4/78934.jpg);}
@@ -10577,9 +10577,9 @@ simple rule of add = #more {background-image: url();}
 #more31280 {background-image: url(http://cdn.myanimelist.net/images/anime/10/75147.jpg);}
 #more30307 {background-image: url(http://cdn.myanimelist.net/images/anime/9/75104.jpg);}
 #more30902 {background-image: url(http://cdn.myanimelist.net/images/anime/2/75992l.jpg);}
-#more31757 {background-image: url(http://cdn.myanimelist.net/images/anime/13/78001l.jpg);}
-#more31758 {background-image: url(http://cdn.myanimelist.net/images/anime/8/76487l.jpg);}
-#more32526 {background-image: url(http://cdn.myanimelist.net/images/anime/9/78080l.jpg);}
+#more31757 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/80930.webp);}
+#more31758 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/81576.webp);}
+#more32526 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/80791.webp);}
 #more32262 {background-image: url(http://cdn.myanimelist.net/images/anime/4/77447l.jpg);}
 #more32282 {background-image: url(http://cdn.myanimelist.net/images/anime/12/77529l.jpg);}
 #more31080 {background-image: url(http://cdn.myanimelist.net/images/anime/7/77219l.jpg);}
@@ -10619,7 +10619,7 @@ simple rule of add = #more {background-image: url();}
 #more32729 {background-image: url(http://cdn.myanimelist.net/images/anime/4/78530.jpg);}
 #more32595 {background-image: url(http://cdn.myanimelist.net/images/anime/9/78254.jpg);}
 #more32615 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82890.webp);}
-#more32189 {background-image: url(http://cdn.myanimelist.net/images/anime/10/77316.jpg);}
+#more32189 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/80433.webp);}
 #more32268 {background-image: url(http://cdn.myanimelist.net/images/anime/2/77744.jpg);}
 #more31772 {background-image: url(http://cdn.myanimelist.net/images/anime/13/76519.jpg);}
 #more31389 {background-image: url(http://cdn.myanimelist.net/images/anime/4/75684.jpg);}
@@ -10671,6 +10671,21 @@ simple rule of add = #more {background-image: url();}
 #more31706 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/79946.webp);}
 #more32214 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/78805.webp);}
 #more31245 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/82121.webp);}
+#more30654 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/77966.webp);}
+#more31715 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/79375.webp);}
+#more31904 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/79757.webp);}
+#more33047 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/79299.webp);}
+#more34100 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82060.webp);}
+
+
+
+
+
+
+
+
+
+
 
 
 
