--- a/Anime.css
+++ b/Anime.css
@@ -6,7 +6,7 @@ simple rule of add = #more {background-image: url();}
 
 #more30321 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77275l.jpg);}
 #more31181 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/81100l.jpg);}
-#more5114 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/47421.jpg);}
+#more5114 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/74317.webp);}
 #more9253 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/73199.jpg);}
 #more11061 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/33657.jpg);}
 #more9969 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/50361.jpg);}
@@ -415,7 +415,7 @@ simple rule of add = #more {background-image: url();}
 #more2605 {background-image: url(http://cdn.myanimelist.net/images/anime/5/6559.jpg);}
 #more1485 {background-image: url(http://cdn.myanimelist.net/images/anime/2/49693.jpg);}
 #more1088 {background-image: url(http://cdn.myanimelist.net/images/anime/1/2441.jpg);}
-#more18897 {background-image: url(http://cdn.myanimelist.net/images/anime/12/54337.jpg);}
+#more18897 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/75587.webp);}
 #more15197 {background-image: url(http://cdn.myanimelist.net/images/anime/9/56243.jpg);}
 #more14713 {background-image: url(http://cdn.myanimelist.net/images/anime/5/67999.jpg);}
 #more13767 {background-image: url(http://cdn.myanimelist.net/images/anime/6/60389.jpg);}
@@ -443,7 +443,7 @@ simple rule of add = #more {background-image: url();}
 #more790 {background-image: url(http://cdn.myanimelist.net/images/anime/11/6259.jpg);}
 #more658 {background-image: url(http://cdn.myanimelist.net/images/anime/8/31007.jpg);}
 #more85 {background-image: url(http://cdn.myanimelist.net/images/anime/6/11153.jpg);}
-#more24227 {background-image: url(http://cdn.myanimelist.net/images/anime/2/71754.jpg);}
+#more24227 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/73911.webp);}
 #more22265 {background-image: url(http://cdn.myanimelist.net/images/anime/10/64097.jpg);}
 #more22125 {background-image: url(http://cdn.myanimelist.net/images/anime/12/68055.jpg);}
 #more19319 {background-image: url(http://cdn.myanimelist.net/images/anime/7/51815.jpg);}
@@ -663,7 +663,7 @@ simple rule of add = #more {background-image: url();}
 #more517 {background-image: url(http://cdn.myanimelist.net/images/anime/1/517.jpg);}
 #more210 {background-image: url(http://cdn.myanimelist.net/images/anime/13/6441.jpg);}
 #more91 {background-image: url(http://cdn.myanimelist.net/images/anime/1/91.jpg);}
-#more22729 {background-image: url(http://cdn.myanimelist.net/images/anime/7/60263.jpg);}
+#more22729 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/65759.webp);}
 #more18661 {background-image: url(http://cdn.myanimelist.net/images/anime/6/56425.jpg);}
 #more18055 {background-image: url(http://cdn.myanimelist.net/images/anime/10/50885.jpg);}
 #more16011 {background-image: url(http://cdn.myanimelist.net/images/anime/13/75094l.jpg);}
@@ -1001,7 +1001,7 @@ simple rule of add = #more {background-image: url();}
 #more19221 {background-image: url(http://cdn.myanimelist.net/images/anime/10/53235.jpg);}
 #more10935 {background-image: url(http://cdn.myanimelist.net/images/anime/7/30177.jpg);}
 #more10714 {background-image: url(http://cdn.myanimelist.net/images/anime/7/32945.jpg);}
-#more10067 {background-image: url(http://cdn.myanimelist.net/images/anime/4/65355.jpg);}
+#more10067 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/63909.webp);}
 #more8687 {background-image: url(http://cdn.myanimelist.net/images/anime/6/23935.jpg);}
 #more8100 {background-image: url(http://cdn.myanimelist.net/images/anime/3/26215.jpg);}
 #more6893 {background-image: url(http://cdn.myanimelist.net/images/anime/7/18822.jpg);}
@@ -1060,7 +1060,7 @@ simple rule of add = #more {background-image: url();}
 #more1394 {background-image: url(http://cdn.myanimelist.net/images/anime/7/4087.jpg);}
 #more617 {background-image: url(http://cdn.myanimelist.net/images/anime/9/2641.jpg);}
 #more452 {background-image: url(http://cdn.myanimelist.net/images/anime/8/20111.jpg);}
-#more356 {background-image: url(http://cdn.myanimelist.net/images/anime/4/30327.jpg);}
+#more356 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/3067.webp);}
 #more23725 {background-image: url(http://cdn.myanimelist.net/images/anime/12/67859.jpg);}
 #more22069 {background-image: url(http://cdn.myanimelist.net/images/anime/4/58205.jpg);}
 #more21667 {background-image: url(http://cdn.myanimelist.net/images/anime/7/63773.jpg);}
@@ -1179,7 +1179,7 @@ simple rule of add = #more {background-image: url();}
 #more879 {background-image: url(http://cdn.myanimelist.net/images/anime/9/29109.jpg);}
 #more165 {background-image: url(http://cdn.myanimelist.net/images/anime/1/165.jpg);}
 #more134 {background-image: url(http://cdn.myanimelist.net/images/anime/5/3088.jpg);}
-#more27787 {background-image: url(http://cdn.myanimelist.net/images/anime/7/67679.jpg);}
+#more27787 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/72626.webp);}
 #more25519 {background-image: url(http://cdn.myanimelist.net/images/anime/13/67359.jpg);}
 #more22763 {background-image: url(http://cdn.myanimelist.net/images/anime/3/59203.jpg);}
 #more21473 {background-image: url(http://cdn.myanimelist.net/images/anime/11/61681.jpg);}
@@ -1527,7 +1527,7 @@ simple rule of add = #more {background-image: url();}
 #more18041 {background-image: url(http://cdn.myanimelist.net/images/anime/10/52079.jpg);}
 #more17729 {background-image: url(http://cdn.myanimelist.net/images/anime/10/73591.jpg);}
 #more15751 {background-image: url(http://cdn.myanimelist.net/images/anime/6/44858.jpg);}
-#more13469 {background-image: url(http://cdn.myanimelist.net/images/anime/6/50363.jpg);}
+#more13469 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/64277.webp);}
 #more10711 {background-image: url(http://cdn.myanimelist.net/images/anime/13/47551.jpg);}
 #more9931 {background-image: url(http://cdn.myanimelist.net/images/anime/2/27474.jpg);}
 #more9332 {background-image: url(http://cdn.myanimelist.net/images/anime/5/28371.jpg);}
@@ -1658,7 +1658,7 @@ simple rule of add = #more {background-image: url();}
 #more24475 {background-image: url(http://cdn.myanimelist.net/images/anime/9/63827.jpg);}
 #more21863 {background-image: url(http://cdn.myanimelist.net/images/anime/11/62219.jpg);}
 #more16694 {background-image: url(http://cdn.myanimelist.net/images/anime/12/44918.jpg);}
-#more16444 {background-image: url(http://cdn.myanimelist.net/images/anime/6/52575.jpg);}
+#more16444 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/68781.webp);}
 #more14833 {background-image: url(http://cdn.myanimelist.net/images/anime/4/46041.jpg);}
 #more12753 {background-image: url(http://cdn.myanimelist.net/images/anime/11/39033.jpg);}
 #more12467 {background-image: url(http://cdn.myanimelist.net/images/anime/6/35977.jpg);}
@@ -5677,7 +5677,7 @@ simple rule of add = #more {background-image: url();}
 #more21495 {background-image: url(http://cdn.myanimelist.net/images/anime/2/56701.jpg);}
 #more20855 {background-image: url(http://cdn.myanimelist.net/images/anime/13/55475.jpg);}
 #more15979 {background-image: url(http://cdn.myanimelist.net/images/anime/7/43495.jpg);}
-#more15565 {background-image: url(http://cdn.myanimelist.net/images/anime/10/58191.jpg);}
+#more15565 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/75233.webp);}
 #more15177 {background-image: url(http://cdn.myanimelist.net/images/anime/11/41111.jpg);}
 #more12135 {background-image: url(http://cdn.myanimelist.net/images/anime/12/34247.jpg);}
 #more12131 {background-image: url(http://cdn.myanimelist.net/images/anime/4/55889.jpg);}
@@ -9763,7 +9763,7 @@ simple rule of add = #more {background-image: url();}
 #more11589 {background-image: url(http://cdn.myanimelist.net/images/anime/13/32327.jpg);}
 #more11545 {background-image: url(http://cdn.myanimelist.net/images/anime/10/32257.jpg);}
 #more11541 {background-image: url(http://cdn.myanimelist.net/images/anime/7/33869.jpg);}
-#more11533 {background-image: url(http://cdn.myanimelist.net/images/anime/5/32171.jpg);}
+#more11533 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/79524.webp);}
 #more11525 {background-image: url(http://cdn.myanimelist.net/images/anime/10/32137.jpg);}
 #more11521 {background-image: url(http://cdn.myanimelist.net/images/anime/10/32139.jpg);}
 #more11497 {background-image: url(http://cdn.myanimelist.net/images/anime/3/32083.jpg);}
