upd plan to watch
Yuuki Yuuna wa Yuusha de Aru: Yuusha no Shou

--- a/Anime.css
+++ b/Anime.css
@@ -10683,6 +10683,6 @@ simple rule of add = #more {background-image: url();}
 #more31561 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/76109.webp);}
 #more33049 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/79291.webp);}
 #more32686 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/81906.webp);}
-
+#more34445 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83013.webp);}
 
 
