--- a/Anime.css
+++ b/Anime.css
@@ -10685,6 +10685,12 @@ simple rule of add = #more {background-image: url();}
 #more32686 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/81906.webp);}
 #more34445 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83013.webp);}
 #more34465 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83086.webp);}
+#more34497 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/83232.webp);}
+#more34279 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82503.webp);}
+#more31173 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/77834.webp);}
+#more33354 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/83107.webp);}
+#more33208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79799.webp);}
+#more34522 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83247.webp);}
 
 
 
