--- a/Anime.css
+++ b/Anime.css
@@ -10691,6 +10691,6 @@ simple rule of add = #more {background-image: url();}
 #more33354 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/83107.webp);}
 #more33208 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/79799.webp);}
 #more34522 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83247.webp);}
-
-
+#more33581 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/83172.webp);}
+#more34126 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83291.webp);}
 
