--- a/Anime.css
+++ b/Anime.css
@@ -10693,4 +10693,9 @@ simple rule of add = #more {background-image: url();}
 #more34522 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/2/83247.webp);}
 #more33581 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/83172.webp);}
 #more34126 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83291.webp);}
+#more34240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82388.webp);}
+#more34580 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/83409.webp);}
+#more34561 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83358.webp);}
+
+
 
