--- a/Anime.css
+++ b/Anime.css
@@ -371,7 +371,7 @@ simple rule of add = #more {background-image: url();}
 #more1594 {background-image: url(http://cdn.myanimelist.net/images/anime/12/25478.jpg);}
 #more1089 {background-image: url(http://cdn.myanimelist.net/images/anime/9/49647.jpg);}
 #more861 {background-image: url(http://cdn.myanimelist.net/images/anime/5/21858.jpg);}
-#more25303 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/6/82398.webp);}
+#more25303 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/9/83382.webp);}
 #more20815 {background-image: url(http://cdn.myanimelist.net/images/anime/5/55723.jpg);}
 #more18689 {background-image: url(http://cdn.myanimelist.net/images/anime/5/54235.jpg);}
 #more16395 {background-image: url(http://cdn.myanimelist.net/images/anime/3/64107.jpg);}
@@ -3090,7 +3090,7 @@ simple rule of add = #more {background-image: url();}
 #more2715 {background-image: url(http://cdn.myanimelist.net/images/anime/6/58211.jpg);}
 #more2632 {background-image: url(http://cdn.myanimelist.net/images/anime/13/57853.jpg);}
 #more2573 {background-image: url(http://cdn.myanimelist.net/images/anime/12/3360.jpg);}
-#more1817 {background-image: url(http://cdn.myanimelist.net/images/anime/13/2975.jpg);}
+#more1817 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/1/1817.webp);}
 #more1792 {background-image: url(http://cdn.myanimelist.net/images/anime/12/18535.jpg);}
 #more1727 {background-image: url(http://cdn.myanimelist.net/images/anime/4/14646.jpg);}
 #more1357 {background-image: url(http://cdn.myanimelist.net/images/anime/6/2901.jpg);}
@@ -8116,7 +8116,7 @@ simple rule of add = #more {background-image: url();}
 #more28829 {background-image: url(http://cdn.myanimelist.net/images/anime/10/69585.jpg);}
 #more28827 {background-image: url(http://cdn.myanimelist.net/images/anime/2/69583.jpg);}
 #more28825 {background-image: url(http://cdn.myanimelist.net/images/anime/12/75086l.jpg);}
-#more28819 {background-image: url(http://cdn.myanimelist.net/images/anime/10/69605.jpg);}
+#more28819 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/75012.webp);}
 #more28817 {background-image: url(http://cdn.myanimelist.net/images/anime/3/71904.jpg);}
 #more28815 {background-image: url(http://cdn.myanimelist.net/images/anime/9/69537.jpg);}
 #more28813 {background-image: url(http://cdn.myanimelist.net/images/anime/8/69535.jpg);}
@@ -10696,6 +10696,11 @@ simple rule of add = #more {background-image: url();}
 #more34240 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/82388.webp);}
 #more34580 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/7/83409.webp);}
 #more34561 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/11/83358.webp);}
+#more34566 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/4/83369.webp);}
+#more30911 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/79271.webp);}
+#more33475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83443.webp);}
+#more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83460.webp);}
+#more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83334.webp);}
 
 
 
