--- a/Manga.css
+++ b/Manga.css
@@ -67,7 +67,7 @@ Manga Tumbnail
 #more3403 {background-image: url(http://cdn.myanimelist.net/images/manga/2/54789.jpg);}
 #more40 {background-image: url(http://cdn.myanimelist.net/images/manga/1/57157.jpg);}
 #more1 {background-image: url(http://cdn.myanimelist.net/images/manga/3/54525.jpg);}
-#more656 {background-image: url(http://cdn.myanimelist.net/images/manga/2/51811.jpg);}
+#more656 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/126197.webp);}
 #more4514 {background-image: url(http://cdn.myanimelist.net/images/manga/2/45304.jpg);}
 #more57 {background-image: url(http://cdn.myanimelist.net/images/manga/3/4340.jpg);}
 #more31 {background-image: url(http://cdn.myanimelist.net/images/manga/4/11612.jpg);}
