--- a/Manga.css
+++ b/Manga.css
@@ -4441,7 +4441,7 @@ Manga Tumbnail
 #more47625 {background-image: url(http://cdn.myanimelist.net/images/manga/2/92337.jpg);}
 #more10767 {background-image: url(http://cdn.myanimelist.net/images/manga/2/14543.jpg);}
 #more36413 {background-image: url(http://cdn.myanimelist.net/images/manga/2/65759.jpg);}
-#more35159 {background-image: url(http://cdn.myanimelist.net/images/manga/1/80263.jpg);}
+#more35159 {background-image: url(https://myanimelist.cdn-dena.com/images/manga/3/112473.webp);}
 #more8301 {background-image: url(http://cdn.myanimelist.net/images/manga/4/34969.jpg);}
 #more17321 {background-image: url(http://cdn.myanimelist.net/images/manga/1/26120.jpg);}
 #more1239 {background-image: url(http://cdn.myanimelist.net/images/manga/5/26822.jpg);}
