--- a/Anime.css
+++ b/Anime.css
@@ -10701,6 +10701,6 @@ simple rule of add = #more {background-image: url();}
 #more33475 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/8/83443.webp);}
 #more32407 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83460.webp);}
 #more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83334.webp);}
-
-
+#more34618 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83517.webp);}
+#more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/82895.webp);}
 
