--- a/Anime.css
+++ b/Anime.css
@@ -1886,7 +1886,7 @@ simple rule of add = #more {background-image: url();}
 #more1609 {background-image: url(http://cdn.myanimelist.net/images/anime/8/7222.jpg);}
 #more1422 {background-image: url(http://cdn.myanimelist.net/images/anime/3/67119.jpg);}
 #more712 {background-image: url(http://cdn.myanimelist.net/images/anime/1/712.jpg);}
-#more527 {background-image: url(http://cdn.myanimelist.net/images/anime/3/2615.jpg);}
+#more527 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/73834.webp);}
 #more395 {background-image: url(http://cdn.myanimelist.net/images/anime/10/23247.jpg);}
 #more282 {background-image: url(http://cdn.myanimelist.net/images/anime/1/282.jpg);}
 #more173 {background-image: url(http://cdn.myanimelist.net/images/anime/8/37549.jpg);}
@@ -10703,4 +10703,6 @@ simple rule of add = #more {background-image: url();}
 #more34547 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/10/83334.webp);}
 #more34618 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/13/83517.webp);}
 #more34403 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/12/82895.webp);}
+#more34636 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/3/83564.webp);}
+#more32494 {background-image: url(https://myanimelist.cdn-dena.com/images/anime/5/80690.webp);}
 
